Add more description to README.md